Alignment is not correct for "Signer" signature and "Admin" signature on "PDF" page, "Dropbox" and "Attach" pdf page

--- a/assets/css/rtl-pdf.css
+++ b/assets/css/rtl-pdf.css
@@ -149,7 +149,18 @@ body
    
 }
 
+.pdf-signature-pad
+{
+    display:table; 
+    height: 100px;
+}
 
-
+.sign-text-pdf
+{
+    position: relative;
+    padding-left:25px;
+    width:100% ; 
+    line-height: 1;
+}
 
 
